--- a/client/src/Components/Products/ProductCard/ProductCard.css
+++ b/client/src/Components/Products/ProductCard/ProductCard.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 5%;
-  width: 30%;
+  width: 33%;
   
 }
 
@@ -11,7 +11,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-end;
-    padding: 1%;
     gap: 4%;
     height: 80%;
     background-color: #eee;
@@ -33,7 +32,7 @@
 }
 .card .fa-cart-shopping {
   position: absolute;
-  top: 7px; right: 7px;
+  top: 15px; right: 15px;
   z-index: 1;
 }
 .card .info{
@@ -55,72 +54,17 @@
   gap: 15px;
 
 }
-/* .card .card-main {
-  border-radius: 10px;
-  background-color: #f4f2f3;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-block: 17px 70px;
-  padding-inline: 13px;
-  height: 30rem;
-}
 
-.card img {
-  mix-blend-mode: darken;
-  width: 100%;
-}
 
-.card i {
-  align-self: flex-end;
-  cursor: pointer;
-  color: #38cabc;
-  font-size: 20px;
-  transition: 0.2s;
-}
 
-.card i:hover {
-  transform: scale(1.15);
-}
+  @media (min-width :500px ) and (max-width:1000px) {
+    .card {
+      width: 50%;
+    }
+  } 
 
-.card .info {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.card .info .actions {
-  display: flex;
-  gap: 15px;
-}
-
-.card .info .details {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-
-.card .info .details .price {
-  color: #38cabc;
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.card .info .details .name {
-  color: #242424;
-  font-weight: bold;
-  font-size: 20px;
-}
-
-.card .info .name {
-  color: #242424;
-  font-weight: bold;
-  font-size: 20px;
-}
-
-.card .info .btn {
-  padding: 6px 15px;
-  text-align: center;
-  font-size: 20px;
-  cursor: pointer;
-} */
+  @media (max-width :500px) {
+    .card {
+      width: 100%;
+    }
+  } 
